crates/sui-prover/tests/snapshots/inv/inv_dynamic_field_in_inv.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/inv/inv_dynamic_field_in_inv.ok.move:26:1
   │
26 │ }
   │ ^
   │
   =     at tests/inputs/inv/inv_dynamic_field_in_inv.ok.move:36: make_bad_spec
